--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "mobile-app"
-  command = "npx expo export:web"
+  command = "npx expo export --platform web"
   publish = "dist"
 
 # SPA routing - критично за React Native Web
